[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ledataset"]

[project]
name = "lerobot-dataset"
version = "0.4.4"
description = "A standalone version of [LerobotDataset](https://github.com/huggingface/lerobot/tree/main/src/lerobot/datasets) with relaxed dependencies for easier integration with other projects."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Hugging Face dependencies
    "datasets>=4.0.0,<4.2.0",
    "huggingface-hub[hf-transfer,cli]>=0.34.2,<0.36.0",

    # Core dependencies
    "setuptools>=71.0.0,<81.0.0",
    "cmake>=3.29.0.1,<4.2.0",
    "opencv-python-headless>=4.9.0,<4.13.0",
    "av>=15.0.0,<16.0.0",
    "jsonlines>=4.0.0,<5.0.0",
    "packaging>=24.2,<26.0",

    # Support dependencies
    "deepdiff>=7.0.1,<9.0.0",
    "imageio[ffmpeg]>=2.34.0,<3.0.0",
    "termcolor>=2.4.0,<4.0.0",
]

[dependency-groups]
dev = [
    "hatch>=1.15.1",
    "pyrefly==0.39.2",
    "pytest>=8.4.1",
    "pytest-custom_exit_code>=0.3.0",
    "pytest-cov>=6.2.1",
    "pytest-env>=1.1.5",
    "pytest-instafail>=0.5.0",
    "pytest-regressions>=2.8.3",
    "pytest-xdist>=3.8.0",
    "ruff==0.12.7",
    "ipykernel",
    "nbformat",
    "nbdime",
    "graphviz>=0.21",
    "scikit-learn",
    "ipywidgets>=8.1.8",
]

viz = [
    "rerun-sdk>=0.24.0,<0.27.0",
]